# Trenchcoat

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.txt  requirements.txt
notebooks/: improcessing_example.ipynb  parse_ae_example.ipynb  replotting-data.ipynb
scripts/trenchcoat/: csqimageset.py  highspeed.py  parse_ae.py  plotting.py  repackcsv.py
src/trenchcoat/: __init__.py  csqimageset.py  dataparser.py  flirmagic.py  improcessing.py  parse_ae.py  plotting.py  repackcsv.py  repackcsvp.py  seq.py  videopreview.py
